--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start:local": "node --watch web/server-with-local.js",
+    "start:mongo": "node --watch web/server-with-mongo.js",
+    "start:mysql": "node --watch web/server-with-mysql.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
