--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "start:local": "node --watch web/server-with-local.js",
     "start:mongo": "node --watch web/server-with-mongo.js",
     "start:mysql": "node --watch web/server-with-mysql.js",
