--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "extends": "standard"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "8.0.1",
     "mysql2": "^3.6.5",
