--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-free-port.js
 # Logs
 logs
 *.log
@@ -74,11 +73,11 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+#.env
+#.env.development.local
+#.env.test.local
+#.env.production.local
+#.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
