--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI = mongodb+srv://Henso:miprimerapp@miapp.u8aovzq.mongodb.net/apiMovies?retryWrites=true&w=majority
-DATABASE_URL='mysql://vm7ijwg0i70c4srdnps8:pscale_pw_oV4SPl4eP4cUBlnllfDkDOM9kCaxWa6q0ULKdwKYWnP@aws.connect.psdb.cloud/moviesdb?ssl={"rejectUnauthorized":true}'
+DATABASE_URL1='mysql://s2u13l36ssdopf7j2vni:pscale_pw_coEJ4Uit'
+DATABASE_URL2='ZkUbEs37w5G3jm97QSjnUEsnByPOTRT3baH@aws.connect.psdb.cloud/moviesdb?ssl={"rejectUnauthorized":true}'
